# megano

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: urls.py
frontend/static/frontend/assets/js/: order-detail.js  product-detail.js
frontend/templates/frontend/: cart.html  catalog.html  index.html  order.html  product.html  sale.html
orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  filters.py  models.py  paginations.py  serializers.py  services.py  urls.py  views.py
products/management/commands/: create_categories.py  create_data.py  create_products.py  create_reviews_for_products.py  create_sale_products.py  create_specifications.py  create_tags.py
products/migrations/: 0001_initial.py
profiles/: admin.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
